--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@journeyapps/react-native-quick-sqlite": "^1.1.2",
     "@op-engineering/op-sqlite": "^2.0.20",
     "@types/chance": "^1.1.6",
     "@types/react": "~18.2.45",
@@ -26,19 +25,24 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-csv": "^0.2.0",
     "react-native-fetch-api": "^3.0.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-performance": "^5.1.0",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-quick-sqlite": "^8.0.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-url-polyfill": "^2.0.0",
     "text-encoding": "^0.7.0",
     "typescript": "^5.3.0",
     "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@types/react-native-table-component": "^1.2.8"
   },
   "private": true
 }
