--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@op-engineering/op-sqlite": "^2.0.20",
+    "@op-engineering/op-sqlite": "^5.0.5",
     "@types/chance": "^1.1.6",
     "@types/react": "~18.2.45",
     "base-64": "^1.0.0",
@@ -21,7 +21,7 @@
     "expo-file-system": "~16.0.8",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
-    "expo-sqlite": "~13.3.0",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -44,5 +44,8 @@
     "@babel/plugin-proposal-decorators": "^7.24.1",
     "@types/react-native-table-component": "^1.2.8"
   },
-  "private": true
+  "private": true,
+  "op-sqlite": {
+	  "performanceMode": "1"
+	}
 }
