--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chance": "^1.1.11",
     "expo": "~51.0.17",
     "expo-asset": "~10.0.10",
+    "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.19",
     "expo-file-system": "~17.0.1",
@@ -25,15 +26,15 @@
     "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-csv": "^0.2.0",
     "react-native-fetch-api": "^3.0.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-performance": "^5.1.0",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-table-component": "^1.2.2",
     "react-native-url-polyfill": "^2.0.0",
     "text-encoding": "^0.7.0",
     "typescript": "~5.3.3",
@@ -41,8 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-decorators": "^7.24.1",
-    "@types/react-native-table-component": "^1.2.8"
+    "@babel/plugin-proposal-decorators": "^7.24.1"
   },
   "private": true,
   "op-sqlite": {
