--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@journeyapps/react-native-quick-sqlite": "^1.1.7",
     "@op-engineering/op-sqlite": "^5.0.5",
     "@types/chance": "^1.1.6",
     "@types/react": "~18.2.45",
@@ -25,6 +24,7 @@
     "expo-router": "~3.5.17",
     "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-csv": "^0.2.0",
@@ -32,6 +32,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-performance": "^5.1.0",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-quick-sqlite": "^8.1.0",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
